syntax = "proto2";
package MValue;

option go_package = "/internal/pb";

message BaseObject {
  /*enum Type {
		PLAYER = 0;
		VEHICLE = 1;
		BLIP = 2;
		WEBVIEW = 3;
		VOICE_CHANNEL = 4;
		COLSHAPE = 5;
		CHECKPOINT = 6;
		WEBSOCKET_CLIENT = 7;
		HTTP_CLIENT = 8;
		AUDIO = 9;
		RML_ELEMENT = 10;
		RML_DOCUMENT = 11;
		LOCAL_PLAYER = 12;
	}*/
  required uint32 type = 1;
  required string ptr = 2;
}

message Vector3 {
  required float x = 1;
  required float y = 2;
  required float z = 3;
}

message Vector2 {
  required float x = 1;
  required float y = 2;
}

// used when function is exported from go (Go::Runtime::ProtoToMValue)
message InternFunction {
  required string resourceName = 1;
  required uint64 id = 2;
}

// used when function is imported to go (Go::Runtime::MValueToProto(Bytes))
message ExternFunction {
  required string ptr = 1;
}

message RGBA {
  required uint32 r = 1;
  required uint32 g = 2;
  required uint32 b = 3;
  required uint32 a = 4;
}

message MValue {
  oneof value {
    // default values

    bool noneValue = 1;
    bool nilValue = 2;
    bool boolValue = 3;
    int64 intValue = 4;
    uint64 uintValue = 5;
    double doubleValue = 6;
    string stringValue = 7;

    // special values
    BaseObject baseObjectValue = 10;
    InternFunction internFunctionValue = 11;
    ExternFunction externFunctionValue = 12;
    Vector3 vector3Value = 13;
    RGBA rgbaValue = 14;
    bytes bytesValue = 15;
    Vector2 vector2Value = 16;
  }

  // nested values
  repeated MValue list = 8;
  repeated string dict = 9;
}